[package]
name = "leptos-motion-advanced-features"
version.workspace = true
edition.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-motion.workspace = true
leptos-motion-core.workspace = true
leptos-motion-gestures.workspace = true
leptos-motion-dom.workspace = true

# Web APIs
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
once_cell.workspace = true
paste.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"
test-case = "3.1"
