[package]
name = "dashboard-app"
version.workspace = true
edition.workspace = true
description = "Dashboard application with data visualization animations"

[dependencies]
leptos-motion = { path = "../../crates/leptos-motion", features = ["csr"] }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
log.workspace = true

web-sys.workspace = true
wasm-bindgen.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true

[lib]
crate-type = ["cdylib"]
