[package]
name = "minimal-showcase"
version.workspace = true
edition.workspace = true
description = "Minimal showcase with only core animation features"
license = "MIT"

[dependencies]
leptos-motion-core = { path = "../../crates/leptos-motion-core", features = ["raf", "waapi"], default-features = false }
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
log.workspace = true

web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true

[lib]
crate-type = ["cdylib"]
