[package]
name = "mobile-app"
version.workspace = true
edition.workspace = true
description = "Mobile-style app with page transitions and gestures"

[dependencies]
leptos-motion = { version = "0.8.0", path = "../../crates/leptos-motion", features = ["csr"] }
leptos-motion-dom = { version = "0.8.0", path = "../../crates/leptos-motion-dom" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
log.workspace = true

web-sys.workspace = true
wasm-bindgen.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true

[lib]
crate-type = ["cdylib"]
