[package]
name = "ultra-minimal"
version.workspace = true
edition.workspace = true
description = "Ultra minimal showcase with only essential types"
license = "MIT"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
log.workspace = true

web-sys.workspace = true
wasm-bindgen.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true

[lib]
crate-type = ["cdylib"]
