[package]
name = "v0-7-showcase"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { version = "0.8.6", features = ["csr", "hydrate", "ssr"] }
leptos-motion = { version = "0.8.0", path = "../../crates/leptos-motion" }
leptos-motion-dom = { version = "0.8.0", path = "../../crates/leptos-motion-dom" }
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
leptos = { version = "0.8.6", features = ["csr", "hydrate", "ssr"] }