[package]
name = "v0-7-showcase"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { version = "0.8.8", features = ["csr", "hydrate", "ssr"] }
leptos_macro = "0.8.8"  # Published version
reactive_graph = "0.2.6"  # Published version
leptos-motion = "0.8.1"
leptos-motion-dom = "0.8.1"
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
leptos = { version = "0.8.8", features = ["csr", "hydrate", "ssr"] }
leptos_macro = "0.8.8"  # Published version
reactive_graph = "0.2.6"  # Published version
