[package]
name = "webgl-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "Event",
    "InputEvent",
    "HtmlInputElement",
] }

[lib]
crate-type = ["cdylib"]
